--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-     background-image: url("https://img.freepik.com/free-vector/blue-copy-space-digital-background_23-2148821698.jpg?size=626&ext=jpg&ga=GA1.2.1879181272.1618963200");
+     background-color: rgb(5, 5, 42);
 }
 .container{
     text-align: center;
